# BLEStudio

./: .gitignore  README.md  config_logic_analyzer_iq_data.yaml  pyproject.toml  requirements.txt  save_log.md  提取规则.md
ble_studio/: __init__.py  channel.py  demodulator.py  iq_io.py  measure.py  modulator.py  modulator_v0.py  packet.py  performance.py  report.py  visualizer.py
doc/: correlation_explanation.md  ebn0_vs_snr.md  gfsk_phase_pulse.ipynb  gfsk_phase_pulse.md  logic_analyzer_data_processing.md
examples/: benchmark.py  config.yaml  config_advertising.yaml  config_bwv_import.yaml  config_channel_scan.yaml  config_ideal.yaml  config_import_hex.yaml  config_import_mat.yaml  config_low_snr.yaml  config_rayleigh.yaml  config_rftest_2m_prbs15.yaml  config_rftest_df1.yaml  config_rftest_df2.yaml  config_rftest_pattern.yaml  config_rftest_prbs9.yaml  demo.py  iq_corr_test.py
results_logic_analyzer/: index.html  iq_rx.mat  iq_rx.txt  report.html
template_data/: BLE_1M.bwv  bk.kvdat  test_debug.vcd  test_iq.mat  test_iq.mem  test_iq.npy  test_iq.txt  test_iq_old.mat  test_iq_old.npy  test_iq_old.txt
utils/: analyze_sampling_issues.py  analyze_signal.py  bin_to_vcd.py  compare_iq.py  get_bwv_info.py  logic_analyzer_bin2wave.py  logic_analyzer_bin2wave_prompt.md  logic_analyzer_config.yaml  logic_analyzer_config_rssi.yaml  logic_analyzer_to_iq.py  modulator_analysis.py  my_test.py  read_mat.py  rf_metrics_test.py  search_best_sample.py  snr_sweep.py  test.py  test_rf_metrics.py  visualizer_rf_test.py
