[project]
name = "ble-studio"
version = "0.1.0"
description = "BLE 基带算法平台 - 支持数据包生成和解调"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "BLE Studio Team"}
]
keywords = ["BLE", "Bluetooth", "GFSK", "modulation", "demodulation", "baseband"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "plotly>=5.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "matplotlib>=3.5.0",
    "jupyter>=1.0.0",
    "nbformat>=5.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ble_studio*"]
